vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_or_block.vv
fn maybe_int() ?int {
	return none
}

fn main() {
	value := maybe_int() or {
		{
			$embed_file(@FILE)
		}
		0
	}
	_ = value
}
